--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ip-resolver",
+  "name": "main",
   "version": "1.0.0",
-  "description": "Resolve ip to location",
+  "description": "main",
   "main": "app.js",
   "scripts": {
     "test": "test",
